# simple-podcast-dl

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  devenv.nix  podcast_dl.py  pyproject.toml  pythonbytes.py  setup.py  talkpython.py
podcast_dl/: cli.py  filename_parsers.py  podcast_dl.py  podcasts.py  rss_parsers.py  site_parser.py  utils.py
tests/: test_cli.py  test_filename_parsers.py  test_parse_filename.py  test_parse_site.py  test_rss_parsers.py  test_utils.py
xml/: changelog.xml  podcastinit.xml  pythonbytes.xml  talkpython.xml
