[project]
name = "simple-podcast-dl"
version = "1.7"
description = "Simple podcast downloader (podcatcher)"
readme = "README.md"
license.text = "MIT"
authors = [{ name = "György Kiss", email = "gyorgy@duck.com" }]
requires-python = ">=3.12"
keywords = ["podcasts"]

dependencies = [
    "aiodns>=3.2.0",
    "attrs>=25.1.0",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "python-slugify>=8.0.4",
]

[dependency-groups]
dev = [
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.5",
]

[project.scripts]
podcast-dl = "podcast_dl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["podcast_dl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
